--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ https://templatemo.com/tm-512-moonlight
 
                                                 <h2 class="subheader">Professional Refrences</h2>
 
-                                                <h3 class="subheader"><p><b>Mentor at Washington Eaducation Association (WEA): Irene Wokabi </b></p></h3>
+                                                <h3 class="subheader"><p><b>Mentor at Washington Education Association (WEA): Irene Wokabi </b></p></h3>
 
        
 
