--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@ https://templatemo.com/tm-512-moonlight
                           <img src="img/about_image4.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
+			  <img src="img/background_image.jpg" alt="">
+			  <img src="img/about_image.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
                           <br>
                       </div>
                     </div>
