--- a/index.html
+++ b/index.html
@@ -185,15 +185,17 @@ https://templatemo.com/tm-512-moonlight
                     </div>
                     <div class="col-md-6">
                         <div class="right-image">
-                          <img src="img/about_image.jpg" alt="">
+                          <img src="img/about_image4.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <br>
+			  <img src="img/background_image.jpg" alt="">
                           <img src="img/about_image4.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <br>
+			  <img src="img/background_image.jpg" alt="">
                           <img src="img/about_image3.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
