--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ https://templatemo.com/tm-512-moonlight
 			  <img src="img/background_image.jpg" alt="">
 			  <img src="img/about_image.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
+			  <img src="img/background_image.jpg" alt="">
                           <br>
                       </div>
                     </div>
