--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ https://templatemo.com/tm-512-moonlight
 
         <p><b>DocuSign</b></p>
         
-        <p><b>Adoption & Enablement Project CoordinatorAdoption & Enablement Project Coordinator</b></p>
+        <p><b>Adoption & Enablement Project Coordinator</b></p>
 
         <p><b>DocuSign · Full-time · DocuSign</b></p>
         <p><b>Dec 2019 - Mar 2020 · 4 mos</b></p>
