--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ https://templatemo.com/tm-512-moonlight
                                     <a href="img/fifth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <a href="https://www.linkedin.com/in/samuel-mwangi-ba16aa20b/">LinkedIn</a>
                                         <div class="hover-content">
-                                            <h2>Number Ten</h2>
+                                            <h2>Number Eight</h2>
                                             <p>Please feel free to reach out as I would love to add you to my network!</p>
                                         </div>
                                     </div></a>
@@ -429,7 +429,7 @@ https://templatemo.com/tm-512-moonlight
                                     <a href="img/second_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <a href="http://web-students.net/site177/it121/dom-play.html">DOM Play</a>
                                         <div class="hover-content">
-                                            <h2>Twelvth Item</h2>
+                                            <h2>Ninth Item</h2>
                                             <p>Helping Broadway NY City arctors with Shakespearean Play.</p>
                                         </div>
                                     </div></a>
