--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@ https://templatemo.com/tm-512-moonlight
                                 </div>
                                 <div class="col-md-12">
                                   <fieldset>
-                                    <button type="submit" id="form-submit" class="btn">Send Now</button> 
+				<div class="fb-btn"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/E-commerce-P.O.R.C-A.I/">Send & View P.O.R.C AI</a></div>
+                                     <!-- <button type="submit" id="form-submit" class="btn">Send Now</button> -->
                                   </fieldset>
                                 </div>
                             </div>
