--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-512-moonlight
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home & About Me</em></a></li>
             <li><a href="#2"><i class="fa fa-user"></i> <em>Work Experience</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
-            <li><a href="#4"><i class="fa fa-image"></i> <em>2020 Projects</em></a></li>
+            <li><a href="#4"><i class="fa fa-image"></i> <em>Projects</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
           </ul>
         </nav>
