--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ https://templatemo.com/tm-512-moonlight
                                 </div>
                                 <div class="col-md-12">
                                   <fieldset>
-				<div class="fb-btn"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/E-commerce-P.O.R.C-A.I/">Send & View P.O.R.C AI</a></div>
+				<div class="fb-btn btn-secondary rounded-pill px-md-5 px-4 py-2 radius-0 text-light light-300"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/E-commerce-P.O.R.C-A.I/">Send & View P.O.R.C AI</a></div>
                                      <!-- <button type="submit" id="form-submit" class="btn">Send Now</button> -->
                                   </fieldset>
                                 </div>
