--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ https://templatemo.com/tm-512-moonlight
             3. Click "Share" and choose "Embed map" tab
             4. Copy only URL and paste it within the src="" field below
 	-->
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.3030413476204!2d100.5641230193719!3d13.757206847615207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf51ce6427b7918fc!2sG+Tower!5e0!3m2!1sen!2sth!4v1510722015945" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d345751.0178452105!2d-122.6164039141759!3d47.388924113284936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d47.209445699999996!2d-122.4028448!4m5!1s0x54905cd384346fd5%3A0x6b2b6f122585f9b0!2sseattle%20mall%20address!3m2!1d47.4588849!2d-122.257964!5e0!3m2!1sen!2sus!4v1648527908560!5m2!1sen!2sus" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="col-md-6">
