--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-512-moonlight
             <li><a href="#2"><i class="fa fa-user"></i> <em>Work Experience</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Projects</em></a></li>
-            <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
+            <li><a href="#5"><i class="fa fa-envelope"></i> <em>Map & P.O.R.C AI</em></a></li>
           </ul>
         </nav>
         
@@ -446,7 +446,7 @@ https://templatemo.com/tm-512-moonlight
           <div class="slide" id="5">
             <div class="content fifth-content">
                 <div class="container-fluid">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div id="map">
     <!-- How to change your own map point
             1. Go to Google Maps
@@ -457,10 +457,22 @@ https://templatemo.com/tm-512-moonlight
                             <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d345751.0178452105!2d-122.6164039141759!3d47.388924113284936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d47.209445699999996!2d-122.4028448!4m5!1s0x54905cd384346fd5%3A0x6b2b6f122585f9b0!2sseattle%20mall%20address!3m2!1d47.4588849!2d-122.257964!5e0!3m2!1sen!2sus!4v1648527908560!5m2!1sen!2sus" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <form id="contact" action="" method="post">
-                            <div class="row">
-                                <div class="col-md-12">
+                    <div class="slide" id="1">
+                        <div class="content first-content">
+                        <div class="col-md-12">
+                         <!--<div class="container-fluid"></div>-->
+                         <!--<form id="contact" action="" method="post">-->
+                          <div class="row">
+                                <div class="col-md-6">
+                                    <p>Thank you, for making it this far!  </p>
+                                    <p>Using my skills, I picked up from my education and a mix of my own professional work experience, I can design and launch, useful and elegant integrated experiences across multiple platforms, such as P.O.R.C AI.  </p>
+                                    <p>Here via my P.O.R.C AI project I have developed an e-commerce navigation and flow by designing wireframes and interactive business website prototypes. I have organized content advocating for user and business goals. </p>
+                                    <p>I can create interaction strategies that can help multiple businesses across different Industries. I illustrate this here. </p>
+                                    <p>I can conceive, plan, and lead the development of high-end, useful digital products. In my projects I selected specific Industries to show case my research & development skills. More Integrations will be added.</p>
+                                    <p>This is Strictly a TEST API Shared Web Hosting Domain!</p>
+                                    <p>Data & images showcased are subject to change by sole owner's & creators’ discretion.
+                                        </p>
+                                     <!--
                                   <fieldset>
                                     <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
                                   </fieldset>
@@ -482,9 +494,9 @@ https://templatemo.com/tm-512-moonlight
                                 </div>
                                 <div class="col-md-12">
                                   <fieldset>
-				<!--<div class="fb-btn btn-secondary rounded-pill px-md-5 px-4 py-2 radius-0 text-light light-300"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/E-commerce-P.O.R.C-A.I/">Send & View P.O.R.C AI</a></div>-->
+                                      -->
+				<div class="fb-btn btn-secondary rounded-pill px-md-5 px-4 py-2 radius-0 text-light light-300"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/E-commerce-P.O.R.C-A.I/">  Proceed to view P.O.R.C AI</a></div>
                                      <!-- <button type="submit" id="form-submit" class="btn">Send Now</button> -->
-				 <button type="submit" id="form-submit" class="fb-btn btn-secondary rounded-pill px-md-5 px-4 py-2 radius-0 text-light light-300"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/E-commerce-P.O.R.C-A.I/">Send & View P.O.R.C AI</a>>Send Now</button> 
                                   </fieldset>
                                 </div>
                             </div>
