--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-512-moonlight
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home & About Me</em></a></li>
             <li><a href="#2"><i class="fa fa-user"></i> <em>Work Experience</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
-            <li><a href="#4"><i class="fa fa-image"></i> <em>Projects</em></a></li>
+            <li><a href="#4"><i class="fa fa-image"></i> <em>Phase 1 Projects</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Map & P.O.R.C AI</em></a></li>
           </ul>
         </nav>
@@ -464,7 +464,7 @@ https://templatemo.com/tm-512-moonlight
                          <!--<form id="contact" action="" method="post">-->
                           <div class="row">
                                 <div class="col-md-6">
-				    <h2>Shared Web Hosting Domain, API(Advanced test Project)</h2>
+				    <h2>Shared Web Hosting Domain, API(Advanced Project)</h2>
                                     <p>Thank you, for making it this far!  </p>
                                     <p>Using my skills, I picked up from my education and a mix of my own professional work experience, I can design and launch, useful and elegant integrated experiences across multiple platforms, such as P.O.R.C AI.  </p>
                                     <p>Here via my P.O.R.C AI project I have developed an e-commerce navigation and flow by designing wireframes and interactive business website prototypes. I have organized content advocating for user and business goals. </p>
