--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://templatemo.com/tm-512-moonlight
               <img src="img/mini_logo.png" alt="">
           </div>
           <ul>
-            <li><a href="#1"><i class="fa fa-home"></i> <em>Home & About Me</em></a></li>
+            <li><a href="#1"><i class="fa fa-home"></i> <em>Introduction & About Me</em></a></li>
             <li><a href="#2"><i class="fa fa-user"></i> <em>Work Experience</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Phase 1 Projects</em></a></li>
@@ -59,7 +59,7 @@ https://templatemo.com/tm-512-moonlight
                   </div>
                   <div class="col-md-9">
                       <h2>Mwangi Njoroge Samuel</h2>
-                      <h3>About me</h3>
+                      <h3>Introduction</h3>
                       <p>Hello there!</p>
 
                         <p>I'm Samuel Njoroge Mwangi, currently I am a Housing Assistant at King County Housing Authority.</p> 
@@ -76,6 +76,7 @@ https://templatemo.com/tm-512-moonlight
                       
                         <div class="main-btn"><a href="#2">Read More</a></div>
                       <div class="fb-btn"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/Portfolio-project/">Portfolio Mobile plugin</a></div>
+			  <div class="main-btn"><a href="https://samuelmwangi-yr.github.io/E-commerce-About-Section/#slide02">About me</a></div>
                   </div>
               </div>
             </div>
