--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://templatemo.com/tm-512-moonlight
               <img src="img/mini_logo.png" alt="">
           </div>
           <ul>
-            <li><a href="#1"><i class="fa fa-home"></i> <em>Introduction & About Me</em></a></li>
+            <li><a href="#1"><i class="fa fa-home"></i> <em>Introduction & About</em></a></li>
             <li><a href="#2"><i class="fa fa-user"></i> <em>Work Experience</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Phase 1 Projects</em></a></li>
