--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ https://templatemo.com/tm-512-moonlight
                                 <div class="col-md-6">
 				    <h2>Shared Web Hosting Domain, API(Advanced Project)</h2>
                                     <p>Thank you, for making it this far!  </p>
-                                    <p>Using my skills, I picked up from my education and a mix of my own professional work experience, I can design and launch, useful and elegant integrated experiences across multiple platforms, such as P.O.R.C AI.  </p>
+                                    <p>Using skills I picked up from my education and a mix of my own professional work experience, I can design and launch, useful and elegant integrated experiences across multiple platforms, such as P.O.R.C AI.  </p>
                                     <p>Here via my P.O.R.C AI project I have developed an e-commerce navigation and flow by designing wireframes and interactive business website prototypes. I have organized content advocating for user and business goals. </p>
                                     <p>I can create interaction strategies that can help multiple businesses across different Industries. I illustrate this here. </p>
                                     <p>I can conceive, plan, and lead the development of high-end, useful digital products. In my projects I selected specific Industries to show case my research & development skills. More Integrations will be added.</p>
