--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-512-moonlight
                       
                         <div class="main-btn"><a href="#2">Read More</a></div>
                       <div class="fb-btn"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/Portfolio-project/">Portfolio Mobile plugin</a></div>
-			  <div class="fb-btn"><a href="https://samuelmwangi-yr.github.io/E-commerce-About-Section/#slide02">About me</a></div>
+			  <div class="fb-btn"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/E-commerce-About-Section/#slide02">Portfolio Mobile plugin</a></div>
                   </div>
               </div>
             </div>
