--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ https://templatemo.com/tm-512-moonlight
                         <p>I have acquired accredited and certified experience, familiarity and proficiency with Programming techniques, methods & languages Java, Java-Script, HTML, C++, CSS, .NET, AJAX, Node. JS, Power BI, web API’s, Linux, React, PHP, SQL, Python, Unix, Git, Azure DevOps Server, Quality Assurance, test plans, test cases, functional specification documents, gameplay development, application development, process flowcharts, Microsoft SQL Server, Object-Oriented Programming, pseudocode, query code, relational databases & full stack development.</p>
                         <p>Hobbies include painting, taking care of my parakeets, travel and being an active part of my community. Please feel free to reach out as I would love to add you to my network!</p>.
                         
-                        <p>You can contact me via my email listed down below or for further details visit the Mobile plug-in on a smart phone</p>
+                        <p>You can contact me via my email listed down below on all P.O.R.C AI pages or for further details visit the Mobile plug-in on a smart phone</p>
                       
                         <div class="main-btn"><a href="#2">Read More</a></div>
                       <div class="fb-btn"><a rel="nofollow" href="https://samuelmwangi-yr.github.io/Portfolio-project/">Portfolio Mobile plugin</a></div>
