--- a/index.html
+++ b/index.html
@@ -466,13 +466,20 @@ https://templatemo.com/tm-512-moonlight
                           <div class="row">
                                 <div class="col-md-6">
 				    <h2>Shared Web Hosting Domain, API(Advanced Project)</h2>
-                                    <p>Thank you, for making it this far!  </p>
+				    <p>Thank you, for making it this far!  </p>
                                     <p>Using skills I picked up from my education and a mix of my own professional work experience, I can design and launch, useful and elegant integrated experiences across multiple platforms, such as P.O.R.C AI.  </p>
                                     <p>Here via my P.O.R.C AI project I have developed an e-commerce navigation and flow by designing wireframes and interactive business website prototypes. I have organized content advocating for user and business goals. </p>
                                     <p>I can create interaction strategies that can help multiple businesses across different Industries. I illustrate this here. </p>
                                     <p>I can conceive, plan, and lead the development of high-end, useful digital products. In my projects I selected specific Industries to show case my research & development skills. More Integrations will be added.</p>
                                     <p>This is Strictly a TEST API Shared Web Hosting Domain!</p>
                                     <p>Data & images showcased are subject to change by sole owner's & creators’ discretion.
+				    <h2>Disclaimer/Fine Print</h2>
+				    <p>I have built a Test E-commerce API, Web Share Hosting Platform to serve as P.O.R.C AI. </p>
+				    <p>Proof of Concept And (&) Integration. This means it is a test to showcase and serve as an illustration of proof-of-concept, yield & integration of skills acquired via a combination of my education & work experience. </p>
+				    <p>This project is under development, new & updated integrations are still under development. </p>
+				    <p>Data & Images showcased throughout this User Experience may be updated/edited at sole owner’s & creators’ discretion.  </p>
+				    <p>Proceeding beyond this point is & will be taken as agreement to having read & Understood (or at least visually & mentally perceived) the context to previous statements within this section & beyond.</p>
+				    
                                         </p>
                                      <!--
                                   <fieldset>
