--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ https://templatemo.com/tm-512-moonlight
                          <!--<form id="contact" action="" method="post">-->
                           <div class="row">
                                 <div class="col-md-6">
-				    <h2>Shared Web Hosting Domain, API(Advanced Project)</h2>
+				    <h2>A Full Stack, CI/CD, Shared Web Hosting Domain, API(Advanced Project)</h2>
 				    <p>Thank you, for making it this far!  </p>
                                     <p>Using skills I picked up from my education and a mix of my own professional work experience, I can design and launch, useful and elegant integrated experiences across multiple platforms, such as P.O.R.C AI.  </p>
                                     <p>Here via my P.O.R.C AI project I have developed an e-commerce navigation and flow by designing wireframes and interactive business website prototypes. I have organized content advocating for user and business goals. </p>
@@ -474,7 +474,7 @@ https://templatemo.com/tm-512-moonlight
                                     <p>This is Strictly a TEST API Shared Web Hosting Domain!</p>
                                     <p>Data & images showcased are subject to change by sole owner's & creators’ discretion.
 				    <h2>Disclaimer/Fine Print</h2>
-				    <p>I have built a Test E-commerce API, Web Share Hosting Platform to serve as P.O.R.C AI. </p>
+				    <p>I have built a Test Full Stack, CI/CD, E-commerce, Web Share Hosting, API Platform to serve as P.O.R.C AI. </p>
 				    <p>Proof of Concept And (&) Integration. This means it is a test to showcase and serve as an illustration of proof-of-concept, yield & integration of skills acquired via a combination of my education & work experience. </p>
 				    <p>This project is under development, new & updated integrations are still under development. </p>
 				    <p>Data & Images showcased throughout this User Experience may be updated/edited at sole owner’s & creators’ discretion.  </p>
