--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ https://templatemo.com/tm-512-moonlight
                                         <a href="http://web-students.net/site177/it121/time-of-day.html">Time Of Day</a>
                                         <div class="hover-content">
                                             <h2>Number One</h2>
-                                            <p>This web page uses JavaScript to change determining on your current Time of Day.</p>
+                                            <p>This web page changes determining on your current Time of Day.</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
