--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ https://templatemo.com/tm-512-moonlight
 	<p>• Providing support, maintenance & moderation for published business operation features, integrations & applications. </p>
 	<p>• Providing security & control for clients on their platforms by developing cybersecurity protocols to guard against Software vulnerabilities, Spam sending & DDoS or Distributed Denial of Operations Service and protect our Business Operations and Partners. It is partly how P.O.R.C AI Internal systems would be theoretically monitored. (Firewall & Botnet Development/stress testing).</p>
 	<p>• Day-to-day activities include generally using my skills such as Software & Web Development & Testing, UI/UX, Graphic and Visual Design.</p>
-	<p>• I am basically contracted by Influencers, Internet personalities & Social Media Brands (&/) or their representatives, whom I have incorporated into my professional network.</p>
+	<p>• I am basically contracted by Influencers, Internet personalities & Brands (&/) or their representatives, whom I have incorporated into my professional network.</p>
 				
         <p><b>King County Housing Authority</b></p>
         
