--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-512-moonlight
 
                         <p>I'm Mwangi Njoroge Samuel, I am a Cybersecurity & Citizen Developer.</p> 
                             
-                        <p>My experience is concentrated in Front end & end-user software with core office exposure to business operations and general business skills & activities. I have worked in industries such as Government & Public Sector, Information Technology & Services (Cybersecurity), Sales & Marketing and lastly Logistics, Staffing & Recruiting. I have administrative, management and event planning experience.</p>
+                        <p>My experience is concentrated in Front end & end-user software with core office exposure to business operations and general business skills & activities. I have worked in industries such as Government & Public Sector, Information Technology & Services (Cybersecurity), Sales & Marketing and lastly Logistics, Staffing & Recruiting. I have Cybersecurity & Citizen Developer experience, as well as administrative, management and event planning.</p>
 
                         <p>My skills include networking and certified expertise in Microsoft Office Suit, Software & Web Development and Google suite(Including Cloud). Kindly view my Portfolio.</p> 
                             
