--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-512-moonlight
                             
                         <p>My experience is concentrated in Front end & end-user software with core office exposure to business operations and general business skills & activities. I have worked in industries such as Government & Public Sector, Information Technology & Services (Cybersecurity), Sales & Marketing and lastly Logistics, Staffing & Recruiting. I have Cybersecurity & Citizen Developer experience, as well as administrative, management and event planning.</p>
 
-                        <p>My skills include networking and certified expertise in Microsoft Office Suit, Software & Web Development and Google suite(Including Cloud). Kindly view my Portfolio.</p> 
+                        <p>My skills include networking and certified expertise in Microsoft Office Suit, Software & Web Development and Google suite(Including Cloud).</p> 
                             
                         <p>My Education at Seattle Central College is grounded in Computer Science & Engeenering.</p>
                         <p>I have acquired accredited and certified experience, familiarity and proficiency with Programming techniques, methods & languages Java, Java-Script, HTML, C++, CSS, .NET, AJAX, Node. JS, Power BI, web API’s, Linux, React, PHP, SQL, Python, Unix, Git, Azure DevOps Server, Quality Assurance, test plans, test cases, functional specification documents, gameplay development, application development, process flowcharts, Microsoft SQL Server, Object-Oriented Programming, cybersecurity methodologies & procedures, pseudocode, query code, relational databases & full stack development.</p>
