--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-512-moonlight
         <p><b>Dec 2020 - Present</b></p>
         <p><b>Remote, Washington, United States</b></p>
         
-        <p>I can rovide with services in: - </p>
+        <p>I can provide with services in: - </p>
         <p>• Creation of application capabilities for consumption for internal &/or external parties, using tools that are permitted & approved by IT or business units.</p>
         <p>• Using skills, I picked up from my education & a mix of my own professional work experiences, I design and launch, useful & elegant integrated experiences across multiple platforms.</p>
         <p>• Developing navigation and flows by designing wireframes, mainframes, and interactive business websites.</p>
