--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-512-moonlight
           </div>
           <ul>
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home & About Me</em></a></li>
-            <li><a href="#2"><i class="fa fa-user"></i> <em>Work Experience</em></a></li>
+            <li><a href="#2"><i class="fa fa-user"></i> <em>Developments & Experience</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Interactive Projects</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Map & P.O.R.C AI</em></a></li>
@@ -87,7 +87,7 @@ https://templatemo.com/tm-512-moonlight
                 <div class="container-fluid">
                     <div class="col-md-6">
                         <div class="left-content">
-                            <h2>Self-Taught</h2>
+                            <h2>Self-Taught Developments</h2>
 				
 	<p><b>Self-Education</b></p>
         
