--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-512-moonlight
           </div>
           <ul>
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home & About Me</em></a></li>
-            <li><a href="#2"><i class="fa fa-user"></i> <em>Developments & Experience</em></a></li>
+            <li><a href="#2"><i class="fa fa-user"></i> <em>Self-Ed & Experience</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Interactive Projects</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Map & P.O.R.C AI</em></a></li>
@@ -93,7 +93,7 @@ https://templatemo.com/tm-512-moonlight
         
         <p><b>Cybersecurity & Citizen Developer</b></p>
   
-        <p><b>IT System Custom Software Development · Self-Education Full-time · IT System Custom Software Development</b></p>
+        <p><b>IT System Custom Software Development · Self-Education · Full-time</b></p>
         <p><b>Dec 2020 - Present</b></p>
         <p><b>Remote, Washington, United States</b></p>
         
