--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-512-moonlight
           </div>
           <ul>
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home & About Me</em></a></li>
-            <li><a href="#2"><i class="fa fa-user"></i> <em>Experience & S.TDev</em></a></li>
+            <li><a href="#2"><i class="fa fa-user"></i> <em>Experience/ED</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Refrences</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Interactive Projects</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Map & P.O.R.C AI</em></a></li>
