--- a/index.html
+++ b/index.html
@@ -271,6 +271,18 @@ https://templatemo.com/tm-512-moonlight
                           <img src="img/background_image.jpg" alt="">
 			  <img src="img/background_image.jpg" alt="">
 			  <br>
+			  <img src="img/background_image.jpg" alt="">
+                          <img src="img/about_image7.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
+                          <br>
+			  <img src="img/background_image.jpg" alt="">
+                          <img src="img/about_image6.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
+                          <img src="img/background_image.jpg" alt="">
+                          <br>
                           <img src="img/about_image4.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
                           <img src="img/background_image.jpg" alt="">
